--- a/Study/WpfDemoSolution/WpfDemo1/App.xaml
+++ b/Study/WpfDemoSolution/WpfDemo1/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfDemo1"
-             StartupUri="MainWindow.xaml">
+             StartupUri="demoXml.xaml">
     <Application.Resources>
          
     </Application.Resources>
